k8s/ingress-service.yaml
####################################################################################
# Stephen Grider's Kubernetes Lecture 215
# (15 Handling Traffic with Ingress Controllers) is outdated
#
# This alternative I used here is found on:
# https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
#
####################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: test.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
